[package]
name = "docs-se"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Docs Search Engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
clap = "3.0.0-beta.5"
comrak = "0.12.1"
glob = "0.3.0"
# hyper = { version = "0.14.14", features = ["http2", "tcp", "server", "stream"] }
hyper = { version = "0.14.14", features = ["http1", "tcp", "server", "stream"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = { version = "0.26.1", features = ["load_extension", "vtab", "bundled"] }
serde = { version = "1.0.130", features = ["serde_derive"] }
serde_json = "1.0.69"
serde_yaml = "0.8.21"
tokio = { version = "1.13.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "0.8.2", features = ["v4"] }
