[package]
name = "docs-se"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Docs Search Engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = "3.0.0-rc.8"
comrak = "0.12.1"
glob = "0.3"
# hyper = { version = "0.14.14", features = ["http2", "tcp", "server", "stream"] }
hyper = { version = "0.14", features = ["http1", "tcp", "server", "stream"] }
r2d2 = "0.8"
r2d2_sqlite = "0.19.0"
rusqlite = { version = "0.26", features = ["load_extension", "vtab", "bundled"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.15", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "0.8", features = ["v4"] }
