[package]
name = "tiny-docs-se"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Docs Search Engine"
version = "0.1.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fundon/tiny-docs-se"
readme = "README.md"
edition = "2021"
exclude = ["src", "README.md", "LICENSE-*"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
comrak = "0.12"
glob = "0.3"
hyper = { version = "0.14", features = ["http1", "tcp", "server", "stream"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = { version = "0.27", features = [
  "load_extension",
  "vtab",
  "bundled",
] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "ansi",
] }
uuid = { version = "0.8", features = ["v4"], optional = true }
